# Shoplifting-detection

./: .gitignore  README.md  pyproject.toml
configs/: default.yaml
configs/experiments/: baseline.yaml  tune_hidden256.yaml  tune_window48.yaml
scripts/: run_full_pipeline.sh
src/retails_bilstm/: __init__.py  cli.py  data.py  evaluate.py  features.py  metrics.py  model.py  train.py  utils.py
src/retails_bilstm.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
